user-service (#4)
* add user-service

* fixes

* add admin authority

* don't have expireAt before issuedAt

* remove invalid case
