# modules/order-service/src/main/resources/openapi/order-api.yaml
@@ -51,6 +51,20 @@ paths:
                 $ref: '#/components/schemas/OrderDTO'
         '404':
           description: Order not found
+  /orders/me:
+    get:
+      tags: [ Orders ]
+      operationId: getMyOrders
+      summary: Get the current user's orders
+      responses:
+        '200':
+          description: Orders found
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OrderDTO'
 components:
   schemas:
     OrderDTO:
@@ -104,12 +118,8 @@ components:
     CreateOrderRequest:
       type: object
       required:
-        - customerId
         - items
       properties:
-        customerId:
-          type: string
-          format: uuid
         items:
           type: array
           minItems: 1
